# email-extractor

./: .gitignore  CLAUDE.md  README.md  repository.yaml
.claude/skills/odoo-reported-issues/: SKILL.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-26T22-30-53-692Z.yml  page-2026-06-26T22-30-58-061Z.yml  page-2026-06-26T22-31-56-517Z.yml
docs/superpowers/specs/: 2026-06-25-email-extractor-design.md  2026-06-26-email-dashboard-design.md
email-extractor/: Dockerfile  build.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
email-extractor/app/: __init__.py  backfill.py  config.py  db.py  extract.py  httpapi.py  imap_poll.py  mailparse.py  main.py  process.py  store.py
email-extractor/tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_e2e.py  test_extract.py  test_httpapi.py  test_process.py  test_version.py
